화면 크기가 큰 경우 벌어지는 간격이 큰 문제 해결, 전체 width 값을 주었다.

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>유순상 포트폴리오</title>
+    <meta property="og:image" content="./thumbnail.png" />
+    <meta property="og:site_name" content="유순상 포트폴리오" />
+    <meta
+      property="og:description"
+      content="프론트엔드 개발자 유순상의 포트폴리오"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
