project 컴포넌트 키보드로 조작 기능 추가, readme 수정

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,12 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.ico" />
+    <link
+      rel="icon"
+      href="%PUBLIC_URL%/favicon.ico"
+      type="image/x-icon"
+      sizes="16x16"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -25,7 +30,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>유순상 포트폴리오</title>
-    <meta property="og:image" content="./thumbnail.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/thumbnail.jpg" />
     <meta property="og:site_name" content="유순상 포트폴리오" />
     <meta
       property="og:description"
